@@ -284,6 +284,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9612. DistCp worker threads are not terminated after jobs are done.
     (Wei-Chiu Chuang via Yongjun Zhang)
 
+    HDFS-6101. TestReplaceDatanodeOnFailure fails occasionally.
+    (Wei-Chiu Chuang via cnauroth)
+
 Release 2.7.3 - UNRELEASED
 
   INCOMPATIBLE CHANGES
